--- a/src/styles/main/_icons.scss
+++ b/src/styles/main/_icons.scss
@@ -1,14 +1,7 @@
-@font-face {
-  font-family: 'linear';
-  src: url('/fonts/linear/linear.eot');
-  src: url('/fonts/linear/linear.eot') format('eot'), url('/fonts/linear/linear.woff') format('woff'),
-    url('/fonts/linear/linear.ttf') format('truetype'), url('/fonts/linear/linear.svg') format('svg');
-}
-
 [class^='icon-'],
 [class*=' icon-'] {
   /* use !important to prevent issues with browser extensions that change/fonts */
-  font-family: 'linear' !important;
+  font-family: 'Rs-icons' !important;
   speak: none;
   font-style: normal;
   font-weight: normal;
