--- a/src/styles/main/main.scss
+++ b/src/styles/main/main.scss
@@ -1,3 +1,3 @@
-@import './styles/main/fontMixins';
-@import './styles/main/fonts';
-@import './styles/main/icons';
+@import './fontMixins';
+@import './fonts';
+@import './icons';
